--- a/views/food/addFood.ejs
+++ b/views/food/addFood.ejs
@@ -42,7 +42,7 @@
                                             <label>Mô tả:</label>
                                             <textarea name="description" class="form-control" rows="5"></textarea>    
                                         </div>
-                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                        <button type="submit" class="btn btn-primary">Thêm</button>
                                     
                                 </div>
                                 <!-- /.col-lg-6 (nested) -->
@@ -53,11 +53,11 @@
                                     </div>
                                     <div class="form-group">
                                         <label>Đánh giá:</label>
-                                        <input type="number" class="form-control"  name="rating" placeholder="Số lượng đánh giá" >
+                                        <input type="text" class="form-control"  name="rating" placeholder="Số lượng đánh giá" >
                                     </div>
                                     <div class="form-group">
                                         <label>Bookmark:</label>
-                                        <input  type="number" class="form-control" name="bookmark" placeholder="Số lượng bookmark">
+                                        <input  type="number"  class="form-control" name="bookmark" placeholder="Số lượng bookmark">
                                     </div>
                                     <div class="form-group">
                                         <label>Photo:</label>
