--- a/views/food/editFood.ejs
+++ b/views/food/editFood.ejs
@@ -56,7 +56,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label>Đánh giá:</label>
-                                        <input type="number" class="form-control" value="<%= data.rating %>"  name="rating" placeholder="Số lượng đánh giá" >
+                                        <input type="text" class="form-control" value="<%= data.rating %>"  name="rating" placeholder="Số lượng đánh giá" >
                                     </div>
                                     <div class="form-group">
                                         <label>Bookmark:</label>
