--- a/views/food/listFood.ejs
+++ b/views/food/listFood.ejs
@@ -25,6 +25,7 @@
                                         <th>Giá</th>
                                         <th>Tên cửa hàng</th>
                                         <th>Địa chỉ</th>
+                                        <th>Nổi bật</th>
                                         <th>Mô tả</th>
                                         <th>Tác vụ</th>
                                     </tr>
@@ -37,6 +38,7 @@
                                        <td><%= item.price%>  </td>
                                        <td><%= item.nameStore  %>  </td>
                                        <td><%= item.address  %>  </td>
+                                       <td><%= item.popular  %>  </td>
                                        <td><%= item.description  %>  </td>
                                        <td>
                                            <p>
