--- a/views/food/addFood.ejs
+++ b/views/food/addFood.ejs
@@ -17,7 +17,7 @@
                     <div class="panel-body">
                             <div class="row">
                                 <div class="col-lg-6">
-                                    <form action="./addFood" method="post" enctype="multipart/form-data">
+                                    <form action="./addFood" method="post" >
                                         <div class="form-group">
                                             <label>Tên đồ ăn:</label>
                                             <input type="text" class="form-control"  name="name" placeholder="Nhập tên đồ ăn">
@@ -29,6 +29,10 @@
                                         <div class="form-group">
                                             <label>Địa chỉ:</label>
                                             <input  type="text" class="form-control" name="address" placeholder="Nhập địa chỉ">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Khoảng cách:</label>
+                                            <input  type="text" class="form-control" name="range" placeholder="Nhập địa chỉ">
                                         </div>
                                         <div class="form-group">
                                             <label>Danh mục:</label>
@@ -64,9 +68,14 @@
                                         <input  type="number" class="form-control" name="photo" placeholder="Số lượng  photo ">
                                     </div>
                                     <div class="form-group">
-                                        <label>Ảnh đồ ăn:</label>
-                                        <input  name="img" type="file">
+                                        <label>Nổi bật:</label>
+                                        <input  type="checkbox" class="form-control" name="popular" placeholder="Số lượng  photo ">
                                     </div>
+                                    <div class="form-group">
+                                        <label>Ảnh đồ ăn (đường dẫn ảnh):</label>
+                                        <textarea name="images" class="form-control" rows="5"></textarea>    
+                                    </div>
+                                   
                                 </div>
                                 <!-- /.col-lg-6 (nested) -->
                             </div>
