--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -145,6 +145,18 @@
                                 <a href="/" class="active"><i class="fa fa-dashboard fa-fw"></i> Tổng quan</a>
                             </li>
                             <li>
+                                <a href="#"><i class="fa  fa-cutlery fa-fw"></i> Quản lý đơn hàng <span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                    <li>
+                                        <a href="/bills">Đơn hàng</a>
+                                    </li>
+                                    <li>
+                                        <a href="/bills/history">Lịch sử</a>
+                                    </li>
+                                </ul>
+                                <!-- /.nav-second-level -->
+                            </li>
+                            <li>
                                 <a href="#"><i class="fa  fa-cutlery fa-fw"></i> Quản lý đồ ăn<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
