--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -145,13 +145,13 @@
                                 <a href="/" class="active"><i class="fa fa-dashboard fa-fw"></i> Tổng quan</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa  fa-cutlery fa-fw"></i> Quản lý đơn hàng <span class="fa arrow"></span></a>
+                                <a href="#"><i class="fa  fa-truck  fa-fw"></i> Quản lý đơn hàng <span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <a href="/bills">Đơn hàng</a>
+                                        <a href="/bills">Đơn hàng đang xử lý</a>
                                     </li>
                                     <li>
-                                        <a href="/bills/history">Lịch sử</a>
+                                        <a href="/bills/history">Lịch sử đơn hàng </a>
                                     </li>
                                 </ul>
                                 <!-- /.nav-second-level -->
@@ -169,7 +169,7 @@
                                 <!-- /.nav-second-level -->
                             </li>
                             <li>
-                                <a href="#"><i class="fa  fa-cutlery fa-fw"></i> Quản lý Menu<span class="fa arrow"></span></a>
+                                <a href="#"><i class="fa  fa-calendar-o fa-fw"></i> Quản lý danh sách đồ ăn<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
                                         <a href="/collections">Danh sách</a>
@@ -182,67 +182,10 @@
                             </li>
                           
                             <li>
-                                <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
+                                <a href="#"><i class="fa fa-user-o fa-fw"></i> Quản lý khách hàng<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <a href="panels-wells.html">Panels and Wells</a>
-                                    </li>
-                                    <li>
-                                        <a href="buttons.html">Buttons</a>
-                                    </li>
-                                    <li>
-                                        <a href="notifications.html">Notifications</a>
-                                    </li>
-                                    <li>
-                                        <a href="typography.html">Typography</a>
-                                    </li>
-                                    <li>
-                                        <a href="icons.html"> Icons</a>
-                                    </li>
-                                    <li>
-                                        <a href="grid.html">Grid</a>
-                                    </li>
-                                </ul>
-                                <!-- /.nav-second-level -->
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="#">Second Level Item</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Second Level Item</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Third Level <span class="fa arrow"></span></a>
-                                        <ul class="nav nav-third-level">
-                                            <li>
-                                                <a href="#">Third Level Item</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Third Level Item</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Third Level Item</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Third Level Item</a>
-                                            </li>
-                                        </ul>
-                                        <!-- /.nav-third-level -->
-                                    </li>
-                                </ul>
-                                <!-- /.nav-second-level -->
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="blank.html">Blank Page</a>
-                                    </li>
-                                    <li>
-                                        <a href="login.html">Login Page</a>
+                                        <a href="/user">Danh sách khách hàng</a>
                                     </li>
                                 </ul>
                                 <!-- /.nav-second-level -->
