--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -185,7 +185,7 @@
                                 <a href="#"><i class="fa fa-user-o fa-fw"></i> Quản lý khách hàng<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <a href="/user">Danh sách khách hàng</a>
+                                        <a href="/users">Danh sách khách hàng</a>
                                     </li>
                                 </ul>
                                 <!-- /.nav-second-level -->
