--- a/views/login.ejs
+++ b/views/login.ejs
@@ -44,10 +44,10 @@
                             <h3 class="panel-title">Please Sign In</h3>
                         </div>
                         <div class="panel-body">
-                            <form role="form"  method="post"   >
+                            <form role="form">
                                 <fieldset>
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="User name" name="email"  autofocus>
+                                        <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
                                     </div>
                                     <div class="form-group">
                                         <input class="form-control" placeholder="Password" name="password" type="password" value="">
@@ -58,7 +58,7 @@
                                         </label>
                                     </div>
                                     <!-- Change this to a button or input when using this as a form -->
-                                    <button type="submit" class="btn btn-primary">Login</button>
+                                    <a href="/bills" class="btn btn-lg btn-success btn-block">Login</a>
                                 </fieldset>
                             </form>
                         </div>
